docs: rework run/test capture-replay around a tmpfs snapshot channel and resource-currency gate
Reworks the run/test/debug design (docs/planned/lathe-run-test-debug.md) to
reflect the mechanism decisions taken in design review, replacing the earlier
spawned-CaptureMain/nonce-handshake sketch.

Capture:
- The `jvm` shim is now a pure POSIX shell script that only snapshots the raw
  launch (argv, verbatim @argfile copies, env dump) and exits; all parsing moves
  to the server (reusing lathe-core), so the shim carries no lathe-core link and
  its only Surefire-internal knowledge is the ForkedBooter discriminator.
- The shim->server channel is a server-created private temp dir on the system
  filesystem (tmpfs), created 0700 via Files.createTempDirectory because the
  bundle holds capture.env. The unique dir replaces the capture nonce entirely:
  success == a capture.ready completion marker (renamed in last) exists in the
  dir the server just made. Server writes the durable test-launch.json via
  FileUtil.writeAtomically and reaps the temp dir (FileUtil.deleteDir).
- test-launch.json is a peer of lsp-params-*.json: on disk in .lathe/<rel>/,
  lock-guarded, read fresh per request with no in-memory cache (new §3.7).
- Freshness gating keys on POM + module-info.java content fingerprints (not
  mtimes); documents the reactor-dependency module-info in-place-modularization
  edge as a graceful-degradation gap.
- Adds §3.8 shim robustness (fail-closed under set -u, server-owned temp-dir
  lifecycle) after auditing existing lathe temp usage.

Replay:
- §4.4 promotes completeness to a first-class, launch-gating invariant distinct
  from freshness, with a concrete presence check leaning on the compiler shim's
  lock-deleted-last + full-copy-with-orphan-removal invariants.
- Adds a uniform resource-currency gate: a cheap pre-run mtime check over
  sync-captured resource roots (scoped to the completeness module set, main-only
  for upstream deps since test scope is not transitive)